course page updated

--- a/2009-spring/181.004/index.html
+++ b/2009-spring/181.004/index.html
@@ -1,85 +1,47 @@
 <!doctype html>
+<html>
 <head>
-	<title>MATH 285.001 - Differential Equations</title>
+	<title>MATH 181.004 - Calculus I</title>
 	<link rel="stylesheet" type="text/css" href="../../css/main.css"/>
 	<link href="rss.xml" rel="alternate" type="application/rss+xml" title="$title" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
 	<div id="content">
-	<h1>MATH 285.001 - Differential Equations</h1>
-	<tt><strong>TR 11:00am, WRB 3046</strong></tt><br/>
-	<br/>
-	<tt>Instructor:   David Andrs</tt><br/>
-	<tt>Office hours: TR 2:34pm - 3:45pm, AB 625, or by appointment</tt><br/>
-
-	<hr/>
-	<a href="#news">Announcements</a> | 
-	<a href="#textbook">Textbook</a> | 
-	<a href="#homework">Homework</a> | 
-	<a href="#tests">Tests</a> | 
-	<a href="#grades">Grades</a> | 
-	<a href="m285-syllabus.pdf">Syllabus</a>
-	<hr/>
-
-	<a name="news"></a>
-	<h2 class="first">Announcements</h2>
-	(Empty)
+        <a href="../../index.html">back</a>
+	<h1>MATH 181.004 - Calculus I</h1>
+    <tt>Instructor:
+        <a href="http://wolfweb.unr.edu/homepage/keppelma/">Dr. Edward C. Keppelmann</a></tt><br/>
+  <tt>Main class webpage: <a
+          href="http://wolfweb.unr.edu/homepage/keppelma/">http://wolfweb.unr.edu/homepage/keppelma/</a></tt><br/>
+    <br/>
+    <hr/>
+    <h3>MATH 181.004 recitation class</h3>
+    <tt>Teaching assistant:
+      <a href="http://ondrej.certik.cz/">Ondřej Čertík</a></tt><br/>
+	<tt>Time: <strong>TR 4:00-4:50pm</strong></tt><br/>
+	<tt>Location: <strong>PE 104</strong></tt><br/>
+	<tt>Office hours: TR 1:00-2:20pm, AB 625, or by appointment</tt><br/>
 
 	<a name="textbook"></a>
 	<h2>Textbook</h2>
 
 	<div style="float: left; padding: 0 1em 0 0;">
-	<a href="http://academic.cengage.com/cengage/student.do?product_isbn=9780495108245&disciplinenumber=1"><img src="http://images.alibris.com/isbn/9780495108245.gif"/></a>
+	<a href="http://books.google.com/books?id=r6z_AQAACAAJ"><img
+        src="http://bks6.books.google.com/books?id=r6z_AQAACAAJ&printsec=frontcover&img=1&zoom=1&sig=ACfU3U3V-Y0dzoq5cfGJ8PSandZ-BYWGBw"/></a>
 	</div>
-	<p><font size="+1"><strong>A First Course in Differential Equations with Modeling Applications, 9th Edition</strong></font><br/><em>Dennis G. Zill</em>
+	<p><font size="+1"><strong>Calculus: Concepts And Contexts, Third Edition</strong></font><br/><em>James Stewart</em>
 	</p>
 	<div style="clear: both"></div>
 
-	<a name="homework"></a>
-	<h2>Homework</h2>
-	(Empty)
-
-	<a name="tests"></a>
-	<h2>Tests</h2>
+	<h2>Quizzes</h2>
 	<table border="0" cellpadding="2">
-<tr><td>Test I</td>  <td>TBA</td></tr>
-<tr><td>Test II</td> <td>TBA</td></tr>
-<tr><td>Test III</td><td>TBA</td></tr>
-<tr><td colspan="2"></td></tr>
-<tr><td><b>Final</b></td>   <td><b>TBA</b></td></tr>
+<tr><td>Quiz 0 (doesn't count)</td>  <td>TBA</td></tr>
+<tr><td>Quiz 1</td>  <td>TBA</td></tr>
 </table>
 
 
-	<a name="grades"></a>
-	<h2>Grades</h2>
-	<ul>
-	<li>20% based on homework</li>
-	<li>20% based on Test I</li>
-	<li>20% based on Test II</li>
-	<li>20% based on Test III</li>
-	<li>20% based on Final</li>
-</ul>
 
-<b>Make-ups</b>
-<ul>
-	<li>Make-up tests will be given only for excused absences.</li>
-	<li>Make-up tests will be different from scheduled tests.</li>
-</ul>
-
-<b>Grading Scale</b>
-<table border="0" cellpadding="2">
-<tr><td>100-90%</td>   <td>A</td></tr>
-<tr><td> 89-80%</td>   <td>B</td></tr>
-<tr><td> 79-70%</td>   <td>C</td></tr>
-<tr><td> 69-60%</td>   <td>D</td></tr>
-<tr><td>below 60%</td> <td>F</td></tr>
-</table>
-
-
-	<hr/>
-	<div id="footer">
-	<a href="rss.xml">RSS</a>
-	</div>
-	</div>
+	<br/>
 </body>
 </html>
