--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 	<h2 class="first">Teaching</h2>
 <h3>Spring 2009</h3>
-<ul><li><a href="2009-spring/181.004/">MATH 181.004, Calculus I</a> TR 4:00-4:50pm</li>
-<li><a href="2009-spring/181.002/">MATH 181.002, Calculus I</a> TR 6:00-6:50pm</li>
+<ul><li><a href="2009-spring/181.004/index.html">MATH 181.004, Calculus I</a> TR 4:00-4:50pm</li>
+<li><a href="2009-spring/181.002/index.html">MATH 181.002, Calculus I</a> TR 6:00-6:50pm</li>
 </ul>
 	</div>
 </body>
