link to my page added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     AB 625
     Phone: TBA
     email: ondrej@certik.cz
+    personal homepage: <a href="http://ondrej.certik.cz/">http://ondrej.certik.cz</a>
 	</pre>
 
 	<hr/>
