--- a/2009-spring/181.004/index.html
+++ b/2009-spring/181.004/index.html
@@ -18,7 +18,7 @@
     <hr/>
     <h3>MATH 181.004 recitation class</h3>
     <tt>Teaching assistant:
-      <a href="http://ondrej.certik.cz/">Ondřej Čertík</a></tt><br/>
+      <a href="../../index.html">Ondřej Čertík</a></tt><br/>
 	<tt>Time: <strong>TR 4:00-4:50pm</strong></tt><br/>
 	<tt>Location: <strong>PE 104</strong></tt><br/>
 	<tt>Office hours: TR 1:00-2:20pm, AB 625, or by appointment</tt><br/>
