Links to quizzes fixed

--- a/2009-spring/181.004/index.html
+++ b/2009-spring/181.004/index.html
@@ -35,10 +35,18 @@
 	<div style="clear: both"></div>
 
 	<h2>Quizzes</h2>
-	<table border="0" cellpadding="2">
-<tr><td>Quiz 0 (doesn't count)</td>  <td>TBA</td></tr>
-<tr><td>Quiz 1</td>  <td>TBA</td></tr>
-</table>
+	<table border="0" cellpadding="4">
+        <tr>
+            <td>Quiz 0</td>
+            <td><a href="quizzes/0/quiz0.pdf">quiz0.pdf</a></td>
+            <td>January 20, 2009 note: this quiz doesn't count into grade</td>
+        </tr>
+        <tr>
+            <td>Quiz 1</td>
+            <td>TBA</td>
+            <td>January 21, 2009</td>
+        </tr>
+    </table>
 
 
 
