--- a/2009-spring/181.004/index.html
+++ b/2009-spring/181.004/index.html
@@ -34,21 +34,20 @@
 	</p>
 	<div style="clear: both"></div>
 
-	<h2>Quizzes</h2>
+	<h2>Recitations</h2>
 	<table border="0" cellpadding="4">
         <tr>
-            <td>Quiz 0</td>
-            <td><a href="quizzes/0/quiz0.pdf">quiz0.pdf</a></td>
-            <td>January 20, 2009 note: this quiz doesn't count into grade</td>
+            <td>January 20, 2009</td>
+            <td><a href="rec-01-20-2009/recitation.pdf">recitation.pdf</a></td>
+            <td>quiz 0: <a href="rec-01-20-2009/quiz.pdf">quiz.pdf</a> (doesn't
+                count into grade)</td>
         </tr>
         <tr>
-            <td>Quiz 1</td>
-            <td>TBA</td>
             <td>January 22, 2009</td>
+            <td>TBA</td>
+            <td>TBA</td>
         </tr>
     </table>
-
-
 
 	<br/>
 </body>
