--- a/2009-spring/181.004/index.html
+++ b/2009-spring/181.004/index.html
@@ -44,8 +44,8 @@
         </tr>
         <tr>
             <td>January 22, 2009</td>
-            <td>TBA</td>
-            <td>TBA</td>
+            <td><a href="rec-01-22-2009/recitation.pdf">recitation.pdf</a></td>
+            <td>quiz 1: <a href="rec-01-22-2009/quiz.pdf">quiz.pdf</a></td>
         </tr>
     </table>
 
