office hours added

--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!doctype html>
 <html>
 <head>
-	<title>Ondřej Čertík's Homepage</title>
+	<title>Ondřej Čertík's UNR Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
 	<div id="content">
-	<h1>Ondřej Čertík's Homepage</h1>
+	<h1>Ondřej Čertík's UNR Homepage</h1>
 
 	<pre>
     Ondřej Čertík
     Department of Mathematics and Statistics
     University of Nevada, Reno
 
-    AB 625
+    Office: AB 625
+    Office hours: TR 1:00-2:20pm, or by appointment
     email: ondrej@certik.cz
     personal homepage: <a href="http://ondrej.certik.cz/">http://ondrej.certik.cz</a>
 	</pre>
