--- a/2009-spring/181.004/index.html
+++ b/2009-spring/181.004/index.html
@@ -47,6 +47,11 @@
             <td><a href="rec-01-22-2009/recitation.pdf">recitation.pdf</a></td>
             <td>quiz 1: <a href="rec-01-22-2009/quiz.pdf">quiz.pdf</a></td>
         </tr>
+        <tr>
+            <td>January 27, 2009</td>
+            <td><a href="rec-01-27-2009/recitation.pdf">recitation.pdf</a></td>
+            <td>quiz 2 &amp; 3: <a href="rec-01-27-2009/quiz.pdf">quiz.pdf</a></td>
+        </tr>
     </table>
 
 	<br/>
