Google analytics tracking code added

--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
 <li><a href="2009-spring/181.002/index.html">MATH 181.002, Calculus I</a> TR 6:00-6:50pm</li>
 </ul>
 	</div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-681045-6");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </body>
 </html>
