Link the recitation

--- a/2009-spring/181.002/index.html
+++ b/2009-spring/181.002/index.html
@@ -52,6 +52,11 @@
             <td><a href="rec-01-27-2009/recitation.pdf">recitation.pdf</a></td>
             <td>quiz 2 &amp; 3: <a href="rec-01-27-2009/quiz.pdf">quiz.pdf</a></td>
         </tr>
+        <tr>
+            <td>January 29, 2009</td>
+            <td><a href="rec-01-29-2009/recitation.pdf">recitation.pdf</a></td>
+            <td>quiz 4: <a href="rec-01-29-2009/quiz.pdf">quiz.pdf</a></td>
+        </tr>
     </table>
 
 	<br/>
