--- a/2009-spring/181.002/index.html
+++ b/2009-spring/181.002/index.html
@@ -57,6 +57,11 @@
             <td><a href="rec-01-29-2009/recitation.pdf">recitation.pdf</a></td>
             <td>quiz 4: <a href="rec-01-29-2009/quiz.pdf">quiz.pdf</a></td>
         </tr>
+        <tr>
+            <td>February 3, 2009</td>
+            <td><a href="rec-02-03-2009/recitation.pdf">recitation.pdf</a></td>
+            <td>quiz 5 &amp; 6: <a href="rec-02-03-2009/quiz.pdf">quiz.pdf</a></td>
+        </tr>
     </table>
 
 	<br/>
