both indexes updated

--- a/2009-spring/181.004/index.html
+++ b/2009-spring/181.004/index.html
@@ -67,6 +67,30 @@
             <td><a href="rec-02-05-2009/recitation.pdf">recitation.pdf</a></td>
             <td>quiz 7: <a href="rec-02-05-2009/quiz.pdf">quiz.pdf</a></td>
         </tr>
+        <tr>
+            <td>February 10, 2009</td>
+            <td><a href="rec-02-10-2009/recitation.pdf">recitation.pdf</a></td>
+            <td>quiz 8 &amp; 9: <a href="rec-02-10-2009/quiz.pdf">quiz.pdf</a></td>
+        <tr>
+            <td>February 12, 2009</td>
+            <td><a href="rec-02-12-2009/recitation.pdf">recitation.pdf</a></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>February 17, 2009</td>
+            <td><a href="rec-02-17-2009/recitation.pdf">recitation.pdf</a></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>February 19, 2009</td>
+            <td><a href="rec-02-19-2009/recitation.pdf">recitation.pdf</a></td>
+            <td>quiz 10: <a href="rec-02-19-2009/quiz.pdf">quiz.pdf</a></td>
+        </tr>
+        <tr>
+            <td>February 24, 2009</td>
+            <td><a href="rec-02-24-2009/recitation.pdf">recitation.pdf</a></td>
+            <td>quiz 11: <a href="rec-02-24-2009/quiz.pdf">quiz.pdf</a></td>
+        </tr>
     </table>
 
 	<br/>
