--- a/2009-spring/181.004/index.html
+++ b/2009-spring/181.004/index.html
@@ -14,6 +14,8 @@
         <a href="http://wolfweb.unr.edu/homepage/keppelma/">Dr. Edward C. Keppelmann</a></tt><br/>
   <tt>Main class webpage: <a
           href="http://wolfweb.unr.edu/homepage/keppelma/">http://wolfweb.unr.edu/homepage/keppelma/</a></tt><br/>
+  <tt>Schedule: <a
+          href="../181.002/181sched.pdf">181sched.pdf</a></tt><br/>
     <br/>
     <hr/>
     <h3>MATH 181.004 recitation class</h3>
