--- a/2009-spring/181.004/index.html
+++ b/2009-spring/181.004/index.html
@@ -93,6 +93,26 @@
             <td><a href="rec-02-24-2009/recitation.pdf">recitation.pdf</a></td>
             <td>quiz 11: <a href="rec-02-24-2009/quiz.pdf">quiz.pdf</a></td>
         </tr>
+        <tr>
+            <td>February 26, 2009</td>
+            <td></td>
+            <td>quiz 12 &amp; 13: <a href="rec-02-26-2009/quiz.pdf">quiz.pdf</a></td>
+        </tr>
+        <tr>
+            <td>March 3, 2009</td>
+            <td></td>
+            <td>quiz 14: <a href="rec-03-03-2009/quiz.pdf">quiz.pdf</a></td>
+        </tr>
+        <tr>
+            <td>March 5, 2009</td>
+            <td></td>
+            <td>quiz 15: <a href="rec-03-05-2009/quiz.pdf">quiz.pdf</a></td>
+        </tr>
+        <tr>
+            <td>March 10, 2009</td>
+            <td>Preparation for a test</td>
+            <td></td>
+        </tr>
     </table>
 
 	<br/>
