--- a/2009-spring/181.004/index.html
+++ b/2009-spring/181.004/index.html
@@ -111,7 +111,17 @@
         <tr>
             <td>March 10, 2009</td>
             <td>Preparation for a test</td>
+            <td>quiz 16 (hometake): p.252 #15, 16, 17, 18</td>
+        </tr>
+        <tr>
+            <td>March 12, 2009</td>
+            <td>Going over the test</td>
             <td></td>
+        </tr>
+        <tr>
+            <td>March 24, 2009</td>
+            <td>Section 4.1, #1, 3, 5, 6, 7, 10, 27</td>
+            <td>quiz 17:<a href="rec-03-24-2009/quiz.pdf">quiz.pdf</a></td>
         </tr>
     </table>
 
