--- a/2009-spring/181.002/index.html
+++ b/2009-spring/181.002/index.html
@@ -123,6 +123,11 @@
             <td>Section 4.1, #1, 3, 5, 6, 7, 10, 27</td>
             <td>quiz 17:<a href="rec-03-24-2009/quiz.pdf">quiz.pdf</a></td>
         </tr>
+        <tr>
+            <td>March 26, 2009</td>
+            <td><a href="rec-03-26-2009/recitation.pdf">recitation.pdf</a></td>
+            <td>quiz 18 (hometake): p. 276 #38, 40</td>
+        </tr>
     </table>
 
 	<br/>
